# elfs

./: .gitignore  README.md  pyproject.toml
src/elfs/: cli.py  utils.py
src/elfs/core/: analyze_complexity.py  calc_similarity.py  discover.py  filter.py
src/elfs/core/complexity_kpis/: avg_gateway_degree.py  case_count.py  cnc.py  max_gateway_degree.py  noa.py  nof.py  nog.py  variant_count.py
src/elfs/core/discovery/: petri_net.py  utils.py
src/elfs/core/filters/: case_attribute.py  case_completion.py  case_duration.py  event_repetitions.py  events.py  start_and_end_events.py  timeframe.py  utils.py  variants.py
src/elfs/core/objects/: BusinessProcessGraph.py  CausalFootPrint.py  ExtendedPetriNet.py  Gateway.py  Node.py
src/elfs/core/similarity/: behavioral_similarity.py
src/elfs/data/: read.py  write.py
src/elfs/data/access/: converter.py  importer.py  reader.py  utils.py  writer.py
tests/: test_filter.py  test_import.py  test_manage.py  test_org.py  test_similarity.py  utils.py
tests/data/: running-small.xes
